hphp/test/zend/good/ext-gd/imageinterlace_basic.php
<?php

$image = imagecreatetruecolor(100, 100);
var_dump(imageinterlace($image));
?>